--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="#" class="navbar-brand">SurRealEstate</a>
+    <div class="container justify-content-center align-items-center">
+        <a href="#" class="navbar-brand">SurRealEstate</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">TOOLS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">PROPERTIES</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">CONTACTS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT ME</a>
-            </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">TOOLS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">PROPERTIES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">CONTACTS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT ME</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
