add app routing module

--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -1,8 +1,1 @@
-<div class="card" style="width: 35rem;">
-    <div class="card-body">
-        <h5 class="card-title text-secondary">Rental Property Calculator</h5>
-        <hr>
-        <p class="card-text text-info">The calculator helps analyze rental property investmemnt quickly.</p>
-        <a href="#tools/rentalPropertyCalculator" class="btn btn-primary float-right" (click)="onSelect('rentalPropertyCalc')">Calculate</a>
-    </div>
-</div>
+<p>rental property calculator works!</p>
