--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<app-header (tabSelected)="onNavigation($event)"></app-header>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <app-home *ngIf="tabLoaded === 'home'"></app-home>
-      <app-tools *ngIf="tabLoaded === 'tools'"></app-tools>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
