--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -9,7 +9,8 @@
                 <h5 class="card-title text-secondary">Mortgage Payment Calculator</h5>
                 <hr>
                 <p class="card-text text-info">The calculator helps calculate monthly mortgage payment.</p>
-                <a routerLink="/tools/mortgage-payment-calc" routerLinkActive="active" class="btn btn-primary float-right">Calculate</a>
+                <a routerLink="/tools/mortgage-payment-calc" routerLinkActive="active"
+                    class="btn btn-primary float-right">Calculate</a>
             </div>
         </div>
     </div>
@@ -20,7 +21,8 @@
                 <h5 class="card-title text-secondary">Rental Property Calculator</h5>
                 <hr>
                 <p class="card-text text-info">The calculator helps analyze rental property investmemnt quickly.</p>
-                <a routerLink="/tools/rental-property-calc" routerLinkActive="active" class="btn btn-primary float-right">Calculate</a>
+                <a routerLink="/tools/rental-property-calc"
+                    class="btn btn-primary float-right">Calculate</a>
             </div>
         </div>
     </div>
