--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,33 +1,33 @@
-<nav class="navbar navbar-expand-lg navbar-dark at-top" style="background-color: rgba(6, 53, 14, 0.904);">
-    <a class="navbar-brand" routerLink="/home">SurRealEstate</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" routerLink="/">SurRealEstate</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto" routerLinkActive="active">
             <li class="nav-item">
-                <a class="nav-link" routerLink="/home">HOME</a>
+                <a class="nav-link" routerLink="home">HOME</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/tools">TOOLS</a>
+                <a class="nav-link" routerLink="tools">TOOLS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/home">PROPERTIES</a>
+                <a class="nav-link" routerLink="home">PROPERTIES</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/home">JOURNALS</a>
+                <a class="nav-link" routerLink="home">JOURNALS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/home">PLAYGROUNDS</a>
+                <a class="nav-link" routerLink="home">PLAYGROUNDS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/home">CONTACTS</a>
+                <a class="nav-link" routerLink="home">CONTACTS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/home">ABOUT US</a>
+                <a class="nav-link" routerLink="home">ABOUT US</a>
             </li>
         </ul>
     </div>
