add properties component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" routerLink="tools">TOOLS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="home">PROPERTIES</a>
+                <a class="nav-link" routerLink="properties">PROPERTIES</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="home">JOURNALS</a>
