--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -1,18 +1,34 @@
 <div class="container-fluid d-flex justify-content-center">
-    <div class="row">
-        <div class="col-3 d-flex mx-auto" *ngFor="let property of properties">
+    <div class="row col-8">
+        <div class="col-12 d-flex">
+            <div class="btn-group d-flex ml-auto">
+                <button type="button" class="btn">Sort By</button>
+                <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right mr-auto" style="cursor: default">
+                    <li class="dropdown-item" (click)="sort('lowToHigh')">Price (Low to High)</li>
+                    <li class="dropdown-item" (click)="sort('highToLow')">Price (High to Low)</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-3 d-flex" *ngFor="let property of properties">
             <div class="card">
                 <div class="card-body d-flex flex-column">
                     <img src="{{property.img}}" class="card-img-top" alt="...">
                     <div class="col-auto">
                         <hr>
                     </div>
-                    <h5 class="card-text text-info">Asking: {{property.price}} | Offer: {{property.offer}} | Rent:
-                        {{property.rent_zestimate}}</h5>
-                    <p class="card-text text-info">{{property.bedrooms}} bds | {{property.bathrooms}} ba |
-                        {{property.square_footage}} sqft</p>
-                    <p class="card-text text-info">{{property.address}}</p>
-                    <a href="{{property.url}}" class="btn btn-primary mt-auto" target="_blank">Checkout</a>
+                    <h6 class="card-text text-info">Asking: {{property.price}} | Offer: {{property.offer}} | Rent:
+                        {{property.rent_zestimate}}</h6>
+                    <div class="ml-auto card-text text-dark">
+                        <p>{{property.bedrooms}} bds | {{property.bathrooms}} ba | {{property.square_footage}} sqft</p>
+                        <p>{{property.address}}</p>
+                        <p>{{property.title}}</p>
+                    </div>
+                    <a href="{{property.url}}" class="btn btn-dark mt-auto" target="_blank">Checkout</a>
                 </div>
             </div>
         </div>
