--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -4,9 +4,9 @@
             <h1>Real Estate Investment Calculators</h1>
         </header>
 
-        <div class="col-6 d-flex mx-auto">
+        <div class="col-6 d-flex mx-auto  justify-content-center">
             <div class="card">
-                <div class="card-body d-flex flex-column ">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title text-secondary">Mortgage Calculator</h5>
                     <div class="col-auto">
                         <hr>
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="col-6 d-flex amx-auto">
+        <div class="col-6 d-flex amx-auto justify-content-center">
             <div class="card">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title text-secondary">Rental Property Calculator</h5>
