--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -21,7 +21,7 @@
                     <div class="col-auto">
                         <hr>
                     </div>
-                    <h6 class="card-text text-info">Asking: {{property.price}} | Offer: {{property.offer}} | Rent:
+                    <h6 class="card-text text-info">Asking: {{property.price_usd}} | Offer: {{property.offer}} | Rent:
                         {{property.rent_zestimate}}</h6>
                     <div class="ml-auto card-text text-dark">
                         <p>{{property.bedrooms}} bds | {{property.bathrooms}} ba | {{property.square_footage}} sqft</p>
