--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,10 +1,15 @@
-<div class="container-fluid d-flex justify-content-center">
-    <div class="row col-8">
+<div class="container-fluid d-flex justify-content-center heading">
+    <div class="row col-8 justify-content-around align-items-center">
         <header class="col-12 text-center">
             <h1>Real Estate Investment Calculators</h1>
         </header>
-
-        <div class="col-6 d-flex mx-auto  justify-content-center">
+    </div>
+</div>
+<br />
+<br />
+<div class="container-fluid d-flex justify-content-center">
+    <div class="row col-8">
+        <div class="col-6 d-flex mx-auto  justify-content-center p-0">
             <div class="card">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title text-secondary">Mortgage Calculator</h5>
@@ -13,12 +18,12 @@
                     </div>
                     <p class="card-text text-info">The calculator helps calculate monthly mortgage payment.</p>
                     <a routerLink="/tools/mortgage-calc" routerLinkActive="active"
-                        class="btn btn-primary mt-auto ml-auto">Calculate</a>
+                        class="btn btn-dark mt-auto ml-auto">Calculate</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-6 d-flex amx-auto justify-content-center">
+        <div class="col-6 d-flex amx-auto justify-content-center p-0">
             <div class="card">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title text-secondary">Rental Property Calculator</h5>
@@ -26,7 +31,7 @@
                         <hr>
                     </div>
                     <p class="card-text text-info">The calculator helps analyze rental property investmemnt quickly.</p>
-                    <a routerLink="/tools/rental-property-calc" class="btn btn-primary mt-auto ml-auto">Calculate</a>
+                    <a routerLink="/tools/rental-property-calc" class="btn btn-dark mt-auto ml-auto">Calculate</a>
                 </div>
             </div>
         </div>
