--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -1,1 +1,123 @@
-<p>rental property calculator works!</p>
+<div class="container-fluid d-flex justify-content-center heading">
+    <div class="row col-8 justify-content-around align-items-center">
+        <header class="col-12 text-center">
+            <h1>Rental Property Calculator</h1>
+        </header>
+    </div>
+</div>
+
+<br />
+<br />
+
+<div class="containter-fluid d-flex justify-content-center" #propertyInfo>
+    <div class="row col-8">
+        <form class="col-6">
+            <div class="form-row">
+                <div class="form-group col p-1">
+                    <label for="propertyAddress">Property Address</label>
+                    <input type="text" class="form-control" id="propertyAddress">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col p-1">
+                    <label for="propertyCity">Property City</label>
+                    <input type="text" class="form-control" id="propertyCity">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="propertyState">Property State</label>
+                    <input type="text" class="form-control" id="propertyState">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="propertyZip">Property Zip</label>
+                    <input type="text" class="form-control" id="propertyZip">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group p-1">
+                    <label for="propertyAnnualTaxes">Annual Property Taxes</label>
+                    <input type="number" class="form-control" id="propertyAnnualTaxes"
+                        (keyup)="setAnnualPropertyTaxes($event)">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group p-1 col-12">
+                    <label for="propertyPhotos">Property Photos</label>
+                    <input type="url" class="form-control" id="propertyPhotos" (keyup)="setImgUrl($event)">
+                </div>
+            </div>
+        </form>
+        <div class="col-6">
+            <img src="{{imgUrl}}" alt="Property photos not available" class="rounded float-right img-fluid">
+        </div>
+    </div>
+</div>
+<hr>
+<div class="containter-fluid d-flex justify-content-center" #mortgageInfo>
+    <div class="row col-8">
+        <form class="col-12">
+            <div class="form-row">
+                <div class="form-group col p-1">
+                    <label for="askingPrice">Asking Price</label>
+                    <input type="number" class="form-control" id="askingPrice">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="afterRepairValue">After Repair Value</label>
+                    <input type="number" class="form-control" id="afterRepairValue">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="repairCost">Repair Cost</label>
+                    <input type="number" class="form-control" id="repairCost">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col p-1">
+                    <label for="downPayment">Down Payment (%)</label>
+                    <input type="number" class="form-control" id="downPayment">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="mortgageTerm">Mortgage Term (years)</label>
+                    <input type="number" class="form-control" id="mortgageTerm">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="interest">Interest (%)</label>
+                    <input type="number" class="form-control" id="interest">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<hr>
+<div class="containter-fluid d-flex justify-content-center" #rentalInfo>
+    <div class="row col-8">
+        <form class="col-12">
+            <div class="form-row">
+                <div class="form-group col p-1">
+                    <label for="monthlyRent">Monthly Rent</label>
+                    <input type="number" class="form-control" id="monthlyRent">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="maintenance">Maintenance (%)</label>
+                    <input type="number" class="form-control" id="maintenance">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="capExp">Capital Expenditure (%)</label>
+                    <input type="number" class="form-control" id="capExp">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="vacancyRate">Vacancy Rate (%)</label>
+                    <input type="number" class="form-control" id="vacancyRate">
+                </div>
+                <div class="form-group col p-1">
+                    <label for="management">Management (%)</label>
+                    <input type="number" class="form-control" id="management">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="containter-fluid d-flex justify-content-center" #calBtn>
+    <div class="row col-8">
+        <button class="btn btn-dark ml-auto col-2">Caculate</button>
+    </div>
+</div>
