make tool page mobile friendly

--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -7,31 +7,26 @@
 </div>
 <br />
 <br />
-<div class="container-fluid d-flex justify-content-center">
-    <div class="row col-8">
-        <div class="col-6 d-flex mx-auto  justify-content-center p-0">
-            <div class="card">
-                <div class="card-body d-flex flex-column">
+<div class="container">
+    <div class="row">
+        <div class="col-sm col-xs-12">
+            <div class="card h-100">
+                <div class="card-body">
                     <h5 class="card-title text-secondary">Mortgage Calculator</h5>
-                    <div class="col-auto">
-                        <hr>
-                    </div>
+                    <hr>
                     <p class="card-text text-info">The calculator helps calculate monthly mortgage payment.</p>
-                    <a routerLink="/tools/mortgage-calc" routerLinkActive="active"
-                        class="btn btn-dark mt-auto ml-auto">Calculate</a>
+                    <a routerLink="/tools/mortgage-calc" class="btn btn-dark float-right">Calculate</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-6 d-flex amx-auto justify-content-center p-0">
-            <div class="card">
-                <div class="card-body d-flex flex-column">
+        <div class="col-sm col-xs-12">
+            <div class="card h-100">
+                <div class="card-body">
                     <h5 class="card-title text-secondary">Rental Property Calculator</h5>
-                    <div class="col-auto">
-                        <hr>
-                    </div>
+                    <hr>
                     <p class="card-text text-info">The calculator helps analyze rental property investmemnt quickly.</p>
-                    <a routerLink="/tools/rental-property-calc" class="btn btn-dark mt-auto ml-auto">Calculate</a>
+                    <a routerLink="/tools/rental-property-calc" class="btn btn-dark float-right">Calculate</a>
                 </div>
             </div>
         </div>
