--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -45,6 +45,12 @@
                     <input type="url" class="form-control" id="propertyPhotos" (keyup)="setImgUrl($event)">
                 </div>
             </div>
+            <div class="form-row">
+                <div class="form-group p-1 col-12">
+                    <label for="propertyPhotos">Property Description</label>
+                    <textarea class="form-control" id="propertyDescription"></textarea>
+                </div>
+            </div>
         </form>
         <div class="col-6">
             <img src="{{imgUrl}}" alt="Property photos not available" class="rounded float-right img-fluid">
@@ -92,7 +98,7 @@
         <form class="col-12">
             <div class="form-row">
                 <div class="form-group col p-1">
-                    <label for="monthlyRent">Monthly Rent</label>
+                    <label for="monthlyRent">Monthly Rent ($)</label>
                     <input type="number" class="form-control" id="monthlyRent">
                 </div>
                 <div class="form-group col p-1">
@@ -100,7 +106,7 @@
                     <input type="number" class="form-control" id="maintenance">
                 </div>
                 <div class="form-group col p-1">
-                    <label for="capExp">Capital Expenditure (%)</label>
+                    <label for="capExp">Capital Exp (%)</label>
                     <input type="number" class="form-control" id="capExp">
                 </div>
                 <div class="form-group col p-1">
