--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,10 +1,7 @@
-<div class="container-fluid d-flex justify-content-center heading">
-    <div class="row col-8 justify-content-around align-items-center">
-        <header class="col-12 text-center">
-            <h1>Real Estate Investment Calculators</h1>
-        </header>
-    </div>
-</div>
+<header class="wide heading">
+    <h1>Real Estate Investment Calculators</h1>
+</header>
+
 <br />
 <br />
 <div class="container">
@@ -19,7 +16,6 @@
                 </div>
             </div>
         </div>
-
         <div class="col-sm col-xs-12">
             <div class="card h-100">
                 <div class="card-body">
