--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,13 @@
 .heading {
     height: 10rem;
     background-color: cornflowerblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+    h1{
+        font-size:14px;
+    }
 }
