update rental property calculator heading

--- a/src/app/tools/mortgage-calc/mortgage-calc.component.html
+++ b/src/app/tools/mortgage-calc/mortgage-calc.component.html
@@ -23,7 +23,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Load Period (years)</span>
+                                <span class="input-group-text">Loan Period (years)</span>
                             </div>
                             <input type="number" id="years" class="form-control" #inputYears>
                         </div>
