--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -1,10 +1,6 @@
-<div class="container-fluid d-flex justify-content-center heading">
-    <div class="row col-8 justify-content-around align-items-center">
-        <header class="col-12 text-center">
+<header class="wide heading">
             <h1>Rental Property Calculator</h1>
-        </header>
-    </div>
-</div>
+</header>
 
 <br />
 <br />
