--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -1,24 +1,22 @@
-<div class="container-fluid d-flex justify-content-center heading">
-    <div class="row col-8 justify-content-around align-items-center">
-        <div class="col-3 d-flex p-0">
+<div class="wide heading">
+    <div class="row col-md-8 justify-content-around align-items-center">
+        <div class="col-sm col-xs-12 p-1">
             <input type="text" class="form-control search-slt" placeholder="City" #inputCity>
         </div>
-        <div class="col-3 d-flex p-0">
+        <div class="col-sm col-xs-12 p-1">
             <input type="text" class="form-control search-slt" placeholder="State" #inputState>
         </div>
-        <div class="col-3 p-0">
+        <div class="col-sm col-xs-12 p-1">
             <button type="button" class="btn btn-block btn-dark"
                 (click)="search(inputCity.value, inputState.value)">Search</button>
         </div>
     </div>
 </div>
 
-<div class="container-fluid d-flex justify-content-center">
-
-    <div class="row col-8">
-        <div class="col-12 d-flex p-0">
-
-            <div class="btn-group d-flex ml-auto">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-xs-12 d-flex flex-column p-0">
+            <div class="btn-group ml-auto">
                 <button type="button" class="btn">Sort By</button>
                 <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
@@ -31,23 +29,22 @@
             </div>
         </div>
 
-        <div class="col-3 d-flex p-0" *ngFor="let property of properties">
-            <div class="card">
+        <div class="col-sm-3 col-xs-12 p-1" *ngFor="let property of properties">
+            <div class="card h-100">
                 <div class="card-body d-flex flex-column">
                     <img src="{{property.img}}" class="card-img-top" alt="...">
-                    <div class="col-auto">
-                        <hr>
-                    </div>
+                    <hr>
                     <h6 class="card-text text-info">Asking: {{property.price_usd}}</h6>
                     <h6 class="card-text text-danger">Offer: {{property.offer}} </h6>
                     <h6 class="card-text text-primary">Rent: {{property.rent_zestimate}}</h6>
-                    <div class="ml-auto card-text text-dark">
-                        <p>{{property.bedrooms}} bds | {{property.bathrooms}} ba | {{property.square_footage}} sqft
-                        </p>
+                    <div class="card-text text-dark">
+                        <p>{{property.bedrooms}} bds | {{property.bathrooms}} ba | {{property.square_footage}} sqft </p>
                         <p>{{property.address}}</p>
-                        <p>{{property.title}}</p>
                     </div>
-                    <a href="{{property.url}}" class="btn btn-dark mt-auto" target="_blank">Checkout</a>
+                    <div class="mt-auto">
+                        <p>{{property.title}}</p>
+                        <a href="{{property.url}}" class="btn btn-dark btn-block" target="_blank">Checkout</a>
+                    </div>
                 </div>
             </div>
         </div>
