add rental property report component

--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -127,7 +127,7 @@
 <div class="containter p-1" #calBtn>
     <div class="row">
         <div class="col-sm-10 col-xs-12">
-            <button class="btn btn-dark col-2 float-right">Caculate</button>
+            <a routerLink="/tools/rental-property-report" class="btn btn-dark float-right">Calculate</a>
         </div>
     </div>
 </div>
