--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -126,8 +126,8 @@
 
 <div class="containter p-1" #calBtn>
     <div class="row">
-        <div class="col-sm-10 col-xs-12">
-            <a routerLink="/tools/rental-property-report" class="btn btn-dark float-right">Calculate</a>
+        <div class="col-sm-2 col-xs-12 offset-sm-5 text-center">
+            <a routerLink="/tools/rental-property-report" class="btn btn-dark align-items-center btn-block">Calculate</a>
         </div>
     </div>
 </div>
