--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -4,7 +4,7 @@
 
 <br />
 <br />
-<div class="container">
+<div class="container p-2">
     <div class="row">
         <div class="col-sm col-xs-12">
             <div class="card h-100">
