--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -5,85 +5,86 @@
 <br />
 <br />
 
-<div class="containter p-2" #propertyInfo>
+<div class="container" #propertyInfo>
     <div class="row">
         <div class="col-sm-5 col-xs-12 offset-sm-2">
             <form>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="propertyAddress">Property Address</label>
                         <input type="text" class="form-control" id="propertyAddress">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="propertyCity">Property City</label>
                         <input type="text" class="form-control" id="propertyCity">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="propertyState">Property State</label>
                         <input type="text" class="form-control" id="propertyState">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="propertyZip">Property Zip</label>
                         <input type="text" class="form-control" id="propertyZip">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="propertyAnnualTaxes">Annual Property Taxes</label>
                         <input type="number" class="form-control" id="propertyAnnualTaxes"
                             (keyup)="setAnnualPropertyTaxes($event)">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="propertyPhotos">Property Photos</label>
                         <input type="url" class="form-control" id="propertyPhotos" (keyup)="setImgUrl($event)">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="propertyPhotos">Property Description</label>
                         <textarea class="form-control" id="propertyDescription"></textarea>
                     </div>
                 </div>
             </form>
         </div>
+        
         <div class="col-sm-3 col-xs-12">
             <img src="{{imgUrl}}" alt="Property photos not available" class="rounded float-left img-fluid">
         </div>
     </div>
 </div>
 <hr>
-<div class="containter p-2" #mortgageInfo>
+<div class="container" #mortgageInfo>
     <div class="row">
         <div class="col-sm-8 col-xs-12 offset-sm-2">
             <form>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="askingPrice">Asking Price</label>
                         <input type="number" class="form-control" id="askingPrice">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="repairCost">Repair Cost</label>
                         <input type="number" class="form-control" id="repairCost">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="afterRepairValue">After Repair Value</label>
                         <input type="number" class="form-control" id="afterRepairValue">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="downPayment">Down Payment (%)</label>
                         <input type="number" class="form-control" id="downPayment">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="mortgageTerm">Mortgage Period (years)</label>
                         <input type="number" class="form-control" id="mortgageTerm">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="interest">Interest (%)</label>
                         <input type="number" class="form-control" id="interest">
                     </div>
@@ -93,28 +94,28 @@
     </div>
 </div>
 <hr>
-<div class="containter p-2" #rentalInfo>
+<div class="container" #rentalInfo>
     <div class="row">
         <div class="col-sm-8 col-xs-12 offset-sm-2">
             <form>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="monthlyRent">Monthly Rent ($)</label>
                         <input type="number" class="form-control" id="monthlyRent">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="maintenance">Maintenance (%)</label>
                         <input type="number" class="form-control" id="maintenance">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="capExp">Capital Exp (%)</label>
                         <input type="number" class="form-control" id="capExp">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="vacancyRate">Vacancy Rate (%)</label>
                         <input type="number" class="form-control" id="vacancyRate">
                     </div>
-                    <div class="form-group col-sm col-xs-12 p-1">
+                    <div class="form-group col-sm col-xs-12">
                         <label for="management">Management (%)</label>
                         <input type="number" class="form-control" id="management">
                     </div>
@@ -124,7 +125,7 @@
     </div>
 </div>
 
-<div class="containter p-1" #calBtn>
+<div class="container" #calBtn>
     <div class="row">
         <div class="col-sm-2 col-xs-12 offset-sm-5 text-center">
             <a routerLink="/tools/rental-property-report" class="btn btn-dark align-items-center btn-block">Calculate</a>
